# gpu-benchmarks

./: pyproject.toml
analysis/: common.ipynb  cpu_usage.ipynb  eats.ipynb  gpu_usage.ipynb  pcmark.ipynb  user_test.ipynb
data/: common_runtimes.csv  eats_runtimes.csv  user_test.csv
data/eats/hardware/: nvidia-smi.csv  nvidia-smi_filtered.csv  ranges.txt  top.csv  top_filtered.csv  top_raw.txt  traces.json
data/eats/software/: ranges.txt  top.csv  top_filtered.csv  top_raw.txt  traces.json  traces.txt
data/nextcloud/hardware/: nvidia-smi.csv  nvidia-smi_filtered.csv  ranges.txt  top.csv  top_filtered.csv  top_raw.txt
data/nextcloud/software/: ranges.txt  top.csv  top_filtered.csv  top_raw.txt
data/nowinandroid/hardware/: nvidia-smi.csv  nvidia-smi_filtered.csv  ranges.txt  top.csv  top_filtered.csv  top_raw.txt
data/nowinandroid/software/: ranges.txt  top.csv  top_filtered.csv  top_raw.txt
data/owncloud/hardware/: nvidia-smi.csv  nvidia-smi_filtered.csv  ranges.txt  top.csv  top_filtered.csv  top_raw.txt
data/owncloud/software/: ranges.txt  top.csv  top_filtered.csv  top_raw.txt
data/pcmark/hardware/: nvidia-smi.csv  nvidia-smi_filtered.csv  ranges.txt  result.json  top.csv  top_filtered.csv  top_raw.txt
data/pcmark/software/: ranges.txt  result.json  top.csv  top_filtered.csv  top_raw.txt
parsing/: package.json
parsing/src/: filter-timestamps.js  parse-top.js
